--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lz-string": "^1.4.4",
     "mongod": "^2.0.0",
     "mongoose": "^5.4.11",
-    "nodejs": "0.0.0"
+    "nodejs": "0.0.0",
+    "nodemon": "^2.0.2",
+    "path": "^0.12.7"
   }
 }
