--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "lz-string": "^1.4.4",
     "mongod": "^2.0.0",
     "mongoose": "^5.9.15",
+    "node-windows": "^1.0.0-beta.1",
     "nodejs": "0.0.0",
-    "nodemon": "^2.0.4",
     "path": "^0.12.7"
   }
 }
