--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "angular": "^1.7.7",
     "angular-cookies": "^1.7.7",
     "angular-md5": "^0.1.10",
-    "cookie-parser": "^1.4.4",
+    "connect-redis": "^4.0.4",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -22,6 +23,7 @@
     "mongod": "^2.0.0",
     "mongoose": "^5.9.15",
     "nodejs": "0.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "redis": "^3.0.2"
   }
 }
