--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lz-string": "^1.4.4",
     "mongod": "^2.0.0",
     "mongoose": "^5.9.15",
+    "multer": "^1.4.2",
     "nodejs": "0.0.0",
     "path": "^0.12.7",
     "redis": "^3.0.2"
